--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 %
-The differential cross-section $\d \sigma/\d t$ of nuclear proton- \linebreak
+The differential cross-section $\d \sigma/\d t$ of nuclear proton-%\linebreak
 (anti)proton 
 scattering at low $|t|$ has traditionally been parameterised with a simple 
 exponential function, ${\rm e}^{-B |t|}$, giving a satisfactory description of 
@@ -17,6 +17,7 @@ not improve the fit significantly~\cite{plb147}.
 At the LHC, at 7\,TeV as well as at 8\,TeV, all data published so 
 far~\cite{epl96,epl101-el,prl111,alfa} have been
 compatible with a pure exponential shape.
+
 This report presents a new data sample of elastic scattering at the energy of $\sqrt s = 8\un{TeV}$. Thanks to its very high statistics and an improved analysis technique, an unprecedented precision has been reached in the region of four-momentum transfer squared $|t| \lesssim 0.2\un{GeV^2}$. Both statistical and systematic components of the differential cross-section uncertainty are controlled 
 at a level below $1\un{\%}$, except for the normalisation 
 (Section~\ref{sec:normalisation}). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, extrapolation to $t=0$, used for total cross-section determination. The often used purely exponential extrapolation has been found inadequate, and extended models are provided, still yielding total cross-section values compatible with previous TOTEM results~\cite{prl111}.
