--- a/2014/90m paper/elastic_90m_epjc.tex
+++ b/2014/90m paper/elastic_90m_epjc.tex
@@ -21,30 +21,30 @@
 \def\etal{et al.}
 \def\todo#1{{\color{red} #1}}
 
-\setbox123\hbox{$0$}
-\setbox124\hbox{$.$}
-\def\S{\hbox to\wd123{\hss}}
-\def\.{\hbox to\wd124{\hss}}
+%\setbox123\hbox{$0$}
+%\setbox124\hbox{$.$}
+%\def\S{\hbox to\wd123{\hss}}
+%\def\.{\hbox to\wd124{\hss}}
 
 % TODO: needed?
-\bgroup
-\catcode`\@=11
-
-\gdef\thanksRef#1#2{%
-    \protected@xdef\@thanks{\@thanks\protect\footnotetext[#1]{#2}}%
-}
-\egroup
+%\bgroup
+%\catcode`\@=11
+%
+%\gdef\thanksRef#1#2{%
+%    \protected@xdef\@thanks{\@thanks\protect\footnotetext[#1]{#2}}%
+%}
+%\egroup
 
 % TODO: needed?
-\def\hang{\hangindent=\parindent}
-\catcode`\>=11
-\newskip\itskip \itskip2mm
-\newskip\iitskip \iitskip0mm
-\newdimen\itindent \itindent3mm
-\newdimen\iitindent \iitindent5mm
-\def\>{\par\vskip\itskip\parindent\itindent\indent\hang\llap{\hbox to3mm{$\bullet$\hss}}}
-\def\>E{\par\vskip\itskip\parindent\itindent\indent\hang\llap{\hbox to3mm{\hss}}}
-\def\>>{\par\vskip\iitskip\parindent\iitindent\indent\hang\llap{\hbox to\iitindent{\hss--\ }}}
+%\def\hang{\hangindent=\parindent}
+%\catcode`\>=11
+%\newskip\itskip \itskip2mm
+%\newskip\iitskip \iitskip0mm
+%\newdimen\itindent \itindent3mm
+%\newdimen\iitindent \iitindent5mm
+%\def\>{\par\vskip\itskip\parindent\itindent\indent\hang\llap{\hbox to3mm{$\bullet$\hss}}}
+%\def\>E{\par\vskip\itskip\parindent\itindent\indent\hang\llap{\hbox to3mm{\hss}}}
+%\def\>>{\par\vskip\iitskip\parindent\iitindent\indent\hang\llap{\hbox to\iitindent{\hss--\ }}}
 
 \def\Name#1{\textsc{#1}, }
 \def\REVIEW#1#2#3#4{{\it #1} {\bf #2} (#3) #4}
@@ -100,28 +100,48 @@ another data set. This unprecedented precision allows to exclude a purely expone
 
 %--------------------------------------------------
 
-\iffalse
-\section{Conclusions}
+%\iffalse
+\section{Conclusions and Outlook}
+%
+Thanks to a very-high statistics data set and an improved analysis technique,
+TOTEM has experimentally excluded a purely exponential differential 
+cross-section for elastic proton-proton scattering with more than $7\,\sigma$
+in the $|t|$ range from 0.027 to 0.2\,GeV$^{2}$ at $\sqrt{s}=8\,$TeV. The data
+are described satisfactorily with an exponent linear or quadratic in $t$.
+Using this refined parameterisation for the extrapolation to the optical point,
+$t = 0$, yields a total cross-section compatible with the previous measurement.
 
-new data - high statistics
-new analysis - only irreducible unc. left - which ones
-unprecedented precision in a range
-data exclude pure exponential in that range, two methods, 7sigma
-extended models for extrapolation to t=0, sigma\_tot compatible to previous TOTEM measurement
-\fi
+In the next article~\cite{1km}, this proof of non-exponentiality in a 
+$t$-domain strongly
+dominated by hadronic interactions will be combined with a measurement of 
+elastic scattering in the Coulomb-nuclear interference region, providing strong
+constraints on the phenomenological description of the hadronic phase and of 
+the interference mechanism.
+
+
+%new data - high statistics
+%new analysis - only irreducible unc. left - which ones
+%unprecedented precision in a range
+%data exclude pure exponential in that range, two methods, 7sigma
+%extended models for extrapolation to t=0, sigma\_tot compatible to previous TOTEM measurement
+%\fi
 
 %--------------------------------------------------
 
 \begin{acknowledgements}
-THIS IS JUST PLACEHOLDER -----------
-We are indebted to the beam optics development team
-for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank
-the LHC machine coordinators for scheduling the dedicated fills.
+We are grateful to the beam optics development team for the design and the 
+successful commissioning of the high $\beta^{*}$ optics and to the LHC machine 
+coordinators for scheduling the dedicated fills.
 
-This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
-Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
-Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
------------ END OF THE PLACEHOLDER
+We thank B. Alberski, P. Anielski, M. Idzik, I. Jurkowski, R. Lazarz, 
+B. Niemczura for their help in software development.
+
+This work was supported by the institutions listed on the front page and 
+partially also by NSF (US), the Magnus Ehrnrooth Foundation (Finland), the 
+Waldemar von Frenckell Foundation (Finland), the Academy of Finland, the 
+Finnish Academy of Science and Letters (The Vilho, Yrj\"o and Kalle 
+V\"ais\"al\"a Fund), the OTKA grant NK 101438, 73143 (Hungary) and the 
+NKTH-OTKA grant 74458 (Hungary).
 \end{acknowledgements}
 
 
@@ -135,44 +155,48 @@ Finland, the OTKA grant NK 101438, 73143 (Hungary) and the NKTH-OTKA grant 74458
 \bibitem{plb147} \Name{M. Bozzo et al.} \REVIEW{Phys.~Lett.}{B147}{1984}{385}; 
 \bibitem{epl96}
     %First measurements of the total proton-proton cross-section at the LHC energy of $\sqrt s =7\,\rm TeV$ CERN-PH-EP-2011-158
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
 \bibitem{epl101-el}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{101}{2013}{21002}
 
 
 \bibitem{prl111} 
-	\Name{G. Antchev~\etal{}~(TOTEM Collaboration)}
+	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Phys.~Rev.~Lett.}{111}{2013}{012001}
 
 \bibitem{alfa} \Name{The ATLAS Collaboration} ATLAS-CONF-2014-040.
 
 \bibitem{totem-jinst}
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
-	\Name{Anelli G.~\etal{}~(TOTEM Collaboration)}
+	\Name{G.~Anelli~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{JINST}{3}{2008}{S08007}
 
 
 \bibitem{totem-ijmp}
 	% Performance of the Totem Detectors at the LHC
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\Name{G. Antchev~\etal{}~(TOTEM Collaboration)}
 	\REVIEW{Int.~J.~Mod.~Phys.~A}{28}{2013}{1330046}
 
 \bibitem{totem-optics}
-	\Name{Antchev G.~\etal{}~(TOTEM Collaboration)}
+	\Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
 	LHC Optics Measurement with Proton Tracks Detected by the Roman Pots of the TOTEM Experiment, 
-	arXiv:1406.0546
+	arXiv:1406.0546, accepted by New Journal of Physics.
 
 \bibitem{compete} 
-	\Name{Cudell~J.~R.~\etal{} (COMPETE Collaboration)}
+	\Name{J.R.~Cudell~\etal{} (COMPETE Collaboration)}
 	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
 
 \bibitem{lafferty94}
  	% Where to stick your data points: The treatment of measurements within wide bins
-	\Name{Lafferty G.~D.~and Wyatt T.~R.}
+	\Name{G.D.~Lafferty~and T.R.~Wyatt}
 	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
 
+\bibitem{1km} \Name{G.~Antchev~\etal{}~(TOTEM Collaboration)}
+        Measurement of Elastic pp Scattering at $\sqrt{s}=8\,$TeV in the 
+        Coulomb-Nuclear Interference Region by the TOTEM Experiment at the 
+        CERN LHC, this journal.
 
 \iffalse
 
